Alignment Fixed

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@
     font-family: 'Merienda One', cursive;
   }
   .lao-sans-pro {
-    font-family: 'Lao Sans Pro', sans-serif;
+    font-family: 'Lao Sans Pro';
   }
    /* Style for Hero Slider */
    .hero-slider {
